<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.example.aatick.speakerevaluation.SpeakerEvaluation">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/org_name"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_name"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Spearker's Name: "/>
            <TextView
                android:id="@+id/speaker_name"
                android:text=""
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:paddingRight="1dp"
                android:paddingLeft="1dp"
                android:background="@drawable/back"
                android:text="Excelent: 5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:paddingRight="1dp"
                android:paddingLeft="1dp"
                android:background="@drawable/back"
                android:text="Very Good: 4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:paddingRight="1dp"
                android:paddingLeft="1dp"
                android:background="@drawable/back"
                android:text="Good: 3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:paddingRight="1dp"
                android:paddingLeft="1dp"
                android:background="@drawable/back"
                android:text="Moderate: 2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:paddingRight="1dp"
                android:paddingLeft="1dp"
                android:background="@drawable/back"
                android:text="Poor: 1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnlayGroup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/ev_group1"
                android:text="A. "
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/ev_group_name1"
                android:text=" Speaker's Style "
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <ListView
            android:id="@+id/sub_group1"
            android:layout_width="wrap_content"
            android:layout_height="220dp"></ListView>

        <LinearLayout
            android:id="@+id/lnlayGroup2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/ev_group2"
                android:text="B. "
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/ev_group_name2"
                android:text=" Presentation Content "
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <ListView
            android:id="@+id/sub_group2"
            android:layout_width="wrap_content"
            android:layout_height="120dp"></ListView>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/comment"
            android:hint="Put your aditional comment here."/>
        <Button
            android:text="SUBMIT"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="submit"/>
    </LinearLayout>
</ScrollView>